syntax = "proto3";

option csharp_namespace = "Shared.Contracts.IdentityProviderService";

import "identity_provider_service_contracts.proto";

service IdentityManager {
  rpc UserRegister (UserRegisterGrpcRequest) returns (UserRegisterGrpcResponse);
  rpc UserLogin (UserLoginGrpcRequest) returns (UserLoginGrpcResponse);
  rpc UserLogout (UserLogoutGrpcRequest) returns (UserLogoutGrpcResponse);
}

service TokenManager {
  rpc ValidateAccessToken (ValidateAccessTokenGrpcRequest) returns (ValidateAccessTokenGrpcResponse);
  rpc RefreshTokens (RefreshTokensGrpcRequest) returns (RefreshTokensGrpcResponse);
}